fix: 미션 서비스 테스트 수정